--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"lint": "eslint --ext .js,.vue src"
 	},
 	"dependencies": {
-		"mpvue": "^1.0.11",
-		"vuex": "^3.0.1"
+		"mpvue": "^1.0.11"
 	},
 	"devDependencies": {
 		"mpvue-loader": "^1.0.13",
@@ -42,8 +41,9 @@
 		"eslint-plugin-import": "^2.11.0",
 		"eslint-plugin-node": "^6.0.1",
 		"eslint-plugin-html": "^4.0.3",
-		"eslint-config-airbnb-base": "^12.1.0",
-		"eslint-import-resolver-webpack": "^0.9.0",
+		"eslint-config-standard": "^11.0.0",
+		"eslint-plugin-promise": "^3.4.0",
+		"eslint-plugin-standard": "^3.0.1",
 		"eventsource-polyfill": "^0.9.6",
 		"express": "^4.16.3",
 		"extract-text-webpack-plugin": "^3.0.2",
