--- a/package.json
+++ b/package.json
@@ -9,62 +9,62 @@
 		"start": "node build/dev-server.js",
 		"build": "node build/build.js",
 		"lint": "eslint --ext .js,.vue src",
-		"renew": "yarn update --next"
+		"renew": "yarn update --latest"
 	},
 	"dependencies": {
 		"mpvue": "^1.0.11"
 	},
 	"devDependencies": {
 		"babel-core": "^6.22.1",
-		"babel-eslint": "^8.2.3",
-		"babel-loader": "^7.1.1",
+		"babel-eslint": "^10.0.1",
+		"babel-loader": "^8.0.6",
 		"babel-plugin-transform-runtime": "^6.22.0",
 		"babel-preset-env": "^1.3.2",
 		"babel-preset-stage-2": "^6.22.0",
 		"babel-register": "^6.22.0",
 		"chalk": "^2.4.0",
 		"connect-history-api-fallback": "^1.3.0",
-		"copy-webpack-plugin": "^4.5.1",
-		"css-loader": "^0.28.11",
-		"cssnano": "^3.10.0",
-		"eslint": "^4.19.1",
-		"eslint-config-standard": "^11.0.0",
+		"copy-webpack-plugin": "^5.0.3",
+		"css-loader": "^2.1.1",
+		"cssnano": "^4.1.10",
+		"eslint": "^5.16.0",
+		"eslint-config-standard": "^12.0.0",
 		"eslint-friendly-formatter": "^4.0.1",
 		"eslint-loader": "^2.0.0",
-		"eslint-plugin-html": "^4.0.3",
+		"eslint-plugin-html": "^5.0.5",
 		"eslint-plugin-import": "^2.11.0",
-		"eslint-plugin-node": "^6.0.1",
-		"eslint-plugin-promise": "^3.4.0",
-		"eslint-plugin-standard": "^3.0.1",
+		"eslint-plugin-node": "^9.1.0",
+		"eslint-plugin-promise": "^4.1.1",
+		"eslint-plugin-standard": "^4.0.0",
 		"eventsource-polyfill": "^0.9.6",
 		"express": "^4.16.3",
 		"extract-text-webpack-plugin": "^3.0.2",
-		"file-loader": "^1.1.11",
+		"file-loader": "^3.0.1",
 		"friendly-errors-webpack-plugin": "^1.7.0",
 		"glob": "^7.1.2",
 		"html-webpack-plugin": "^3.2.0",
-		"http-proxy-middleware": "^0.18.0",
-		"mpvue-loader": "^1.0.13",
+		"http-proxy-middleware": "^0.19.1",
+		"mpvue-loader": "^2.0.1",
 		"mpvue-template-compiler": "^1.0.11",
 		"mpvue-webpack-target": "^1.0.0",
-		"optimize-css-assets-webpack-plugin": "^3.2.0",
-		"ora": "^2.0.0",
+		"optimize-css-assets-webpack-plugin": "^5.0.1",
+		"ora": "^3.4.0",
 		"portfinder": "^1.0.13",
-		"postcss-loader": "^2.1.4",
+		"postcss-loader": "^3.0.0",
 		"postcss-mpvue-wxss": "^1.0.0",
-		"prettier": "~1.12.1",
+		"prettier": "~1.17.1",
 		"px2rpx-loader": "^0.1.10",
 		"rimraf": "^2.6.0",
-		"semver": "^5.3.0",
+		"semver": "^6.1.0",
 		"shelljs": "^0.8.1",
-		"uglifyjs-webpack-plugin": "^1.2.5",
+		"uglifyjs-webpack-plugin": "^2.1.3",
 		"url-loader": "^1.0.1",
 		"vue-style-loader": "^4.1.0",
-		"webpack": "^3.11.0",
-		"webpack-bundle-analyzer": "^2.2.1",
+		"webpack": "^4.32.2",
+		"webpack-bundle-analyzer": "^3.3.2",
 		"webpack-dev-middleware-hard-disk": "^1.12.0",
 		"webpack-merge": "^4.1.0",
-		"webpack-mpvue-asset-plugin": "^0.0.2"
+		"webpack-mpvue-asset-plugin": "^0.1.4"
 	},
 	"engines": {
 		"node": ">= 4.0.0",
